# vxl-

./: CMakeLists.txt  README.md
res/shaders/color/: fragment.glsl  vertex.glsl
res/shaders/directional-depth/: vertex.glsl
res/shaders/plain/: fragment.glsl  vertex.glsl
res/shaders/textured/: fragment.glsl  vertex.glsl
src/: main.cpp
src/components/: MeshData.h  Transform.h
src/d3/: Camera.cpp  Camera.h  GameObject.cpp  GameObject.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshData.cpp  MeshData.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
src/game/: primitive.h
src/game/controllers/: BindedCameraController.cpp  BindedCameraController.h  FreeCameraController.cpp  FreeCameraController.h  PlayerController.cpp  PlayerController.h
src/game/player/: Player.cpp  Player.h
src/game/world/: World.cpp  World.h
src/game/world/generation/: Chunk.cpp  Chunk.h
src/light/: AmbientLight.cpp  AmbientLight.h  DirectionalLight.cpp  DirectionalLight.h  SpotLight.cpp  SpotLight.h
src/settings/: window-settings.h
src/shader/: Shader.cpp  Shader.h
src/utils/: FileLoader.cpp  FileLoader.h
